--- a/src/components/tutors/Courses/coursecard.css
+++ b/src/components/tutors/Courses/coursecard.css
@@ -7,8 +7,10 @@
   border-radius: 10px;
   margin: 1rem;
   display: flex;
-  gap: 1rem;
   flex-wrap: wrap;
+  width: 47%;
+  align-items: center;
+  height: 300px;
 }
 .img-container-tutor {
   position: relative;
@@ -18,7 +20,8 @@
   flex: 0 1 67%;
 }
 .img-container-tutor img {
-  width: 100%;
+  width: 200px;
+  position: relative;
   object-fit: cover;
 }
 .info-course-tutor {
@@ -34,6 +37,7 @@
 }
 .title-course-tutor {
   font-weight: 600;
+  padding: 2rem 0;
 }
 .desc-course-tutor {
   font-size: 0.7rem;
@@ -42,6 +46,23 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  padding: 1rem 0;
   gap: 5rem;
   justify-content: space-between;
+}
+@media(max-width: 1600px){
+  .course-card-tutor{
+    width: 93%;
+  }
+}
+@media(max-width: 991px){
+  .course-card-tutor{
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: nowrap;
+    
+  }
+
 }
