--- a/src/components/students/SideBar/sidenav.css
+++ b/src/components/students/SideBar/sidenav.css
@@ -48,3 +48,24 @@
 .links--box .fa {
   padding-bottom: 0.9rem;
 }
+@media(max-width: 630px){
+  .sidebar {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(13, 4, 82);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000;
+    flex-flow: column;
+    text-align: center;
+    color: #fff;
+    padding: 0 1rem;
+    font-size: 0.7rem;
+    /* box-shadow: 1px 1px 1px  #ffa500; */
+    border-radius: 2px;
+    box-shadow: 0 0 3px 0 #39657d1f, 0 2px 3px 0 #11e9f438;
+  }
+}
