--- a/src/components/students/SideBar/sidenav.css
+++ b/src/components/students/SideBar/sidenav.css
@@ -69,4 +69,8 @@
     border-radius: 2px;
     box-shadow: 0 0 3px 0 #39657d1f, 0 2px 3px 0 #11e9f438;
   }
+  .sidebar--links{
+    display: flex;
+    align-items: center;
+  }
 }
