--- a/src/components/students/SideBar/sidenav.css
+++ b/src/components/students/SideBar/sidenav.css
@@ -54,13 +54,13 @@
     left: 0;
     right: 0;
     bottom: 0;
-    top: 80vh;
+    top: 88vh;
     background-color: rgb(13, 4, 82);
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 1000;
-    flex-flow: row;
+    flex-flow: column;
     text-align: center;
     color: #fff;
     padding: 0 1rem;
@@ -72,5 +72,6 @@
   .sidebar--links{
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
   }
 }
