--- a/src/StudentContainer/Payments/payments.css
+++ b/src/StudentContainer/Payments/payments.css
@@ -40,4 +40,10 @@
     font-size: 3rem;
     text-align: center;
   }
+  .middle {
+    width: 200px;
+    display: block;
+    margin: 5rem auto;
+    position: relative;
+  }
   
