--- a/src/StudentContainer/Courses/courses.css
+++ b/src/StudentContainer/Courses/courses.css
@@ -57,7 +57,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0.1rem;
-  padding: 1rem;
+  padding: 5rem 1rem 1rem 10rem;
   padding-top: 5rem;
 }
 .course-panel {
@@ -81,4 +81,12 @@
   display: block;
   margin: 5rem auto;
   position: relative;
+}
+@media(max-width: 630px){
+  course-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 1rem 1rem 0rem;
+}
 }
