--- a/src/StudentContainer/Courses/courses.css
+++ b/src/StudentContainer/Courses/courses.css
@@ -83,7 +83,7 @@
   position: relative;
 }
 @media(max-width: 630px){
-  course-section {
+  .course-section {
     display: flex;
     flex-direction: column;
     align-items: center;
