--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@ section {
   section {
     padding-left: 0rem;
     padding-top: 3rem;
-    margin-bottom: 12vh;
+    padding-bottom: 15vh;
   }
   .modal-content {
     width: 95%;
