--- a/src/StudentContainer/Courses/courses.css
+++ b/src/StudentContainer/Courses/courses.css
@@ -87,6 +87,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 1rem 1rem .5rem;
+    padding: 5rem 0rem 0rem 0rem;
 }
 }
