change .env +sidenav center

--- a/src/components/students/SideBar/sidenav.css
+++ b/src/components/students/SideBar/sidenav.css
@@ -32,6 +32,9 @@
 }
 .links--box {
   padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .links--box svg {
   font-size: 3rem;
